# kplc_be

./: .dockerignore  .env.dist  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  fly.toml  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: deploy.yml
common/: constants.py  models.py  pagination.py
config/: asgi.py  healthcheck.py  schema.py  settings.py  urls.py  wsgi.py
kplc_outages/: asgi.py  healthcheck.py  schema.py  settings.py  urls.py  wsgi.py
outages/: admin.py  apps.py  filters.py  models.py  schema.py  serializers.py  urls.py  views.py
outages/migrations/: 0001_initial.py  0002_alter_area_options_alter_county_options_and_more.py
users/: mutations.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
